--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4",
