--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-simple-chatbot": "^0.6.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.80.0"
   },
