--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary-react": "^1.8.1",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
