--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tremor/react": "^2.3.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "cloudinary-react": "^1.8.1",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
